[package]
name = "wasmcane"
version = "0.1.1"
authors = ["Sallar Kaboli <sallar.kaboli@gmail.com>", "Perry Mitchell <perry@perrymitchell.net>"]
description = "Encryption tools for Buttercup in WASM format"
license = "MIT"
repository = "https://github.com/buttercup/wasmcane"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.11"
rcw = { path = "./rust-cardano/rcw/" }
